# apiclienthttp

./: .gitignore  .vulture-whitelist.cfg  LICENSE  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml
apiclienthttp/: __init__.py  auth.py  baseclasses.py  client.py  constants.py  exceptions.py  headers.py  response.py  structures.py  urls.py  utils.py
