# -- Poetry --
[tool.poetry]
name = "api-client-http"
version = "1.0.0"
description = "Client for sync/async query HTTP API Services"
readme = "README.md"
repository = "https://github.com/apiclienthttp/apiclienthttp"
authors = ["Igor Voropaev <snakework10@gmail.com>"]
packages = [{ include = "apiclienthttp" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.0"

[tool.poetry.group.linter.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-fixme = "^1.1.1"
flake8-mutable = "^1.2.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-variables-names = "^0.0.6"
flake8-functions = "^0.0.8"
flake8-bandit = "^4.1.1"
pyproject-flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
mypy = "^1.4.1"
pylint = "^2.17.4"
vulture = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 135
exclude = ["__submodules__", ".git"]
max-returns-amount = 10
max-parameters-amount = 15
per-file-ignores = ["constants.py:N801"]

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
cache_dir = "/dev/null"

# -- Vulture --
[tool.vulture]
exclude = [".vscode/", "__samples__/"]

# -- PyLint --
[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "import-error",
]

[tool.pylint.format]
max-line-length = 135

# -- PyTest --
[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "def __str__"]
